<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">学堂在线</string>
    <string name="xuetangx">学堂在线</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="boot_bottom_text">探索来自学堂在线的MOOC课程</string>
	<string name="copyright">2013 版权所有：学堂在线</string>
    <string name="username">注册邮箱</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="login_btn">登录学堂在线</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="register">用户注册</string>
    <string name="register_tips">注册你的学堂在线账户</string>
    <string name="logining">正在登录。。。</string>
    <string name="registering">正在注册。。。</string>
    <string name="loading">正在加载中。。。</string>
    <string name="login_error_input">邮箱或者密码不能为空</string>
    <string name="login_error_email">邮箱形式不合法</string>
    <string name="json_syntax_error">返回数据格式错误</string>
    <string name="json_status_error">获取数据失败</string>
    <string name="forget_password_tips">请使用网页版重置密码</string>
    <string name="invalid_client">客户端ID错误，请更换版本</string>
    <string name="invalid_grant">用户名或者密码错误</string>
    <string name="web_login_url">https://www.xuetangx.com/login</string>
    <string name="close">关闭</string>
    <string name="email">注册邮箱</string>
    <string name="confirm_password">确认密码</string>
    <string name="username_f">公开用户名</string>
    <string name="full_name">全名比如：张三</string>
    <string name="password_confirm_error">两次密码不一致</string>
    <string name="input_error_empty">不能为空</string>
    <string name="account_setting">账户设置</string>
    <string name="current_account">当前账户</string>
    <string name="video_history">观看历史</string>
    <string name="video_network_mobile">允许2G/3G下观看视频</string>
    <string name="video_cache">缓存视频</string>
    <string name="setting_tools">工具管理</string>
    <string name="about_me">关于我们</string>
    <string name="usage_help">使用帮助</string>
    <string name="about">关于</string>
    <string name="new_version">版本更新</string>
    <string name="feedback">意见反馈</string>
    <string name="mycourse">我的课程</string>
    <string name="search">发现课程</string>
    <string name="setting">个人设置</string>
    <string name="person_preference">个人设置</string>
    <string name="total_course">全部课程</string>
    <string name="enter_course">进入课程</string>
    <string name="enter_update">查看更新</string>
    <string name="register_course">加入课程</string>
    <string name="read_introduce">查看介绍</string>
    <string name="refresh_message">点击刷新通知</string>
    <string name="load_message_failed">加载最新通知失败</string>
    <string name="click_for_more">点击查看更多</string>
    <string name="error_page">https://www.xuetangx.com/404</string>
    <string name="about_me_url">https://www.xuetangx.com/about</string>
    <string name="usage_help_url">https://www.xuetangx.com/about#contact</string>
    <string name="exit_tip">再按一次返回键退出程序</string>
    <string name="no_video">该章节没有视频列表</string>
    <string name="exit_login">退出当前账户</string>
    <string name="exit">退出</string>
</resources>
