<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >  

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="15dp"
        android:background="#222222" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >
        	<TextView
        	    android:id="@+id/forget_title"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
       			android:layout_marginTop="10dp"
       			android:gravity="center_horizontal"
        		android:textColor="#fff"
        		android:text="@string/forget_password_tips"
        		android:textSize="22sp"/>
        	<View
        	    android:layout_width="fill_parent"
        	    android:layout_height="3dp"
        	    android:layout_marginBottom="5dp"
        	    android:background="@color/main_color"/>
        	<TextView
        	    android:id="@+id/forget_link"
        	    android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center_horizontal"
        		android:textColor="#fff"
        		android:textSize="18sp"
        		android:autoLink="web"
        		android:clickable="true"
        		android:onClick="closeBtn"
        		android:text="@string/web_login_url"/>
        	<Button 
        	    android:id="@+id/forget_btn"
        	    android:layout_width="fill_parent"
        	    android:layout_height="wrap_content"
        	    android:layout_marginLeft="20dp"
        	    android:layout_marginRight="20dp"
        	    android:background="@drawable/btn_style_white" 
        	    android:text="@string/close"
        	    android:textSize="18dp"
        	    android:textColor="#222"
        	    android:clickable="true"
        	    android:onClick="closeBtn"
        	    android:layout_marginTop="20dp"/>
         </LinearLayout>

    </RelativeLayout>

</RelativeLayout>