<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    tools:context=".MainActivity" >
    
    <RelativeLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@drawable/main_bottom_normal"
        >           
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="2dp"            
        	>
            <LinearLayout
                android:id="@+id/main_bottom_course_layout"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
              	android:gravity="center_horizontal"
              	android:orientation="vertical"
              	android:layout_weight="1">               	
                <ImageView
            		android:id="@+id/main_bottom_course"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"        	     	
        			android:scaleType="matrix"
        			android:clickable="true"
        			android:src="@drawable/tab_me_pressed" />
                <TextView
                    android:id="@+id/main_bottom_course_text"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:text="@string/mycourse"
            		android:textColor="@color/main_color"
            		android:textSize="12sp" />                
        	 </LinearLayout>
        	 <LinearLayout
        	    android:id="@+id/main_bottom_search_layout"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
              	android:gravity="center_horizontal"
              	android:orientation="vertical"
              	android:layout_weight="1">               	
                <ImageView
            		android:id="@+id/main_bottom_search"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"        	     	
        			android:scaleType="matrix"
        			android:clickable="true"
        			android:src="@drawable/tab_search_normal" />
                <TextView
                    android:id="@+id/main_bottom_search_text"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:text="@string/search"
            		android:textColor="@color/gray_color"
            		android:textSize="12sp" />                
        	 </LinearLayout>
        	 
        	 <LinearLayout
        	    android:id="@+id/main_bottom_setting_layout"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
              	android:gravity="center_horizontal"
              	android:orientation="vertical"
              	android:layout_weight="1">               	
                <ImageView
            		android:id="@+id/main_bottom_setting"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"        	     	
        			android:scaleType="matrix"
        			android:clickable="true"
        			android:src="@drawable/tab_settings_normal" />
                <TextView
                    android:id="@+id/main_bottom_setting_text"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:text="@string/setting"
            		android:textColor="@color/gray_color"
            		android:textSize="12sp" />                
        	 </LinearLayout>        
          
        </LinearLayout>     
       
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    	android:layout_alignParentTop="true"
    	android:layout_above="@id/main_bottom"       
        android:orientation="vertical" >
        
        <android.support.v4.view.ViewPager
        	android:id="@+id/main_pager"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center" > 
        </android.support.v4.view.ViewPager>  
    </LinearLayout>    
</RelativeLayout>
